--- a/templates/base.html
+++ b/templates/base.html
@@ -181,19 +181,31 @@
             </nav>
             {% endblock %}
         </div>
-        <div id="default-modal" class="modal" role="dialog">
-			<div class="modal-dialog modal-lg">
-				<div class="modal-content">
+        <div id="page-modal" class="modal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-body"></div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">
+                        {% trans "Close" %}
+                      </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="file-modal" class="modal" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="{% trans 'Close' %}">
                             <span aria-hidden="true">&times;</span>
                         </button>
                         <h4 class="modal-title"></h4>
                     </div>
-					<div class="modal-body"></div>
-				</div>
-			</div>
-		</div>
+                    <div class="modal-body"></div>
+                </div>
+            </div>
+        </div>
         <div id="search-select-widget" class="hide">
             <ul class="list-inline search-selected">
                 <li><button type="button"><span class="name">None</span> <span aria-label="{% trans 'Remove' %}">&times;</span></button></li>
