Implement and link user profiles for staff
Profiles include user enrollment answers
Both profile and profile links include user tags

--- a/course/templates/course/_usertag.html
+++ b/course/templates/course/_usertag.html
@@ -1,10 +1,9 @@
 {% spaceless %}
 <span
-  class="btn btn-default btn-xs"
+  class="label label-default label-xs"
   {% if not hide_tooltip %}
   data-toggle="tooltip" title="{{tag.description}}"
   {% endif %}
   style="background-color: {{tag.color}}; color: {{tag.font_color}};"
 >{{ tag.name }}</span>
 {% endspaceless %}
-
