--- a/course/templates/course/participants.html
+++ b/course/templates/course/participants.html
@@ -7,12 +7,15 @@
 
 {% block breadcrumblist %}
 {{ block.super }}
-<li class="active">{% trans "All results" %}</li>
+<li class="active">{% trans "Participants" %}</li>
 {% endblock %}
 
 {% block columns %}
 <div class="col-md-12">
-    <h2>{% trans "Participants" %}</h2>
+    <h2>
+      {% trans "Participants" %}
+      &nbsp; <small id="participants-number"></small>
+    </h2>
 
     <table class="table table-condensed">
         <thead>
@@ -21,9 +24,10 @@
                 <th><a href="#" class="order-toggle" id="order-last">{% trans "Last name" %} </a></th>
                 <th><a href="#" class="order-toggle" id="order-first">{% trans "First name" %} </a></th>
                 <th>{% trans "Email" %}</th>
+                <th>{% trans "Tags" %}</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="participants">
         </tbody>
     </table>
 
@@ -37,17 +41,22 @@
   $(function() {
 
     var participants = {{ participants|safe }};
+
+    $('#participants-number').text(participants.length);
+
     participants.sort(function(a, b) { return a.id.localeCompare(b.id); });
 
     var insertItems = function() {
-      $('tbody').children().remove();
+      $('#participants').children().remove();
       participants.forEach(function(participant) {
         var row = $('<tr></tr>').appendTo('tbody');
-        $('<td></td>').text(participant.id).appendTo(row);
-        $('<td></td>').text(participant.last_name).appendTo(row);
-        $('<td></td>').text(participant.first_name).appendTo(row);
-        var link = $('<a></a>').text(participant.email).attr('href', 'mailto:' + participant.email);
-        $('<td></td>').append(link).appendTo(row);
+        var link = $('<a></a>').attr('href', participant.link);
+        $('<td></td>').append(link.clone().text(participant.id)).appendTo(row);
+        $('<td></td>').append(link.clone().text(participant.last_name)).appendTo(row);
+        $('<td></td>').append(link.clone().text(participant.first_name)).appendTo(row);
+        //link = $('<a></a>').attr('href', 'mailto:' + participant.email);
+        $('<td></td>').append(link.clone().text(participant.email)).appendTo(row);
+        $('<td></td>').html(participant.tags).appendTo(row);
       });
     };
 
