--- a/exercise/templates/exercise/staff/user_results.html
+++ b/exercise/templates/exercise/staff/user_results.html
@@ -18,7 +18,7 @@
 <table class="table table-bordered">
   <tr>
     <td rowspan="2">
-      <img src="{{ profile.avatar_url }}" alt="avatar" />
+      <img src="{{ student.userprofile.avatar_url }}" alt="avatar" />
     </td>
     <th>{% trans "Student id" %}</th>
     <th>{% trans "Last name" %}</th>
