Implement basis for custom grade calculation plugins.

--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -174,8 +174,10 @@
 {% endfor %}
 
 <script>
+var aplusPointsTotal = {{ total_json|safe }};
+
 $(function() {
-  var limit = 1;
+  var limit = 2;
   var expired = $(".module-expired");
   if (expired.size() > limit) {
     expired.slice(0, expired.size() - limit).hide();
