Hotfix for yet another user/profile mixup

--- a/exercise/templates/exercise/staff/user_results.html
+++ b/exercise/templates/exercise/staff/user_results.html
@@ -57,7 +57,7 @@
 {% block sidecontent %}
 {% category_points student %}
 
-{% plugin_renderers student.userprofile instance "results" as plugins %}
+{% plugin_renderers student instance "results" as plugins %}
 {% for plugin in plugins %}
     {{ plugin.render|safe }}
 {% endfor %}
