--- a/notification/templates/notification/_notification_menu.html
+++ b/notification/templates/notification/_notification_menu.html
@@ -1,18 +1,25 @@
 {% load i18n %}
 {% load course %}
 {% if unread.count > 0 %}
-<li role="presentation" class="menu-notification">
+<li role="presentation" class="menu-notification dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
         <span class="glyphicon glyphicon-envelope pull-left" aria-hidden="true"></span>
         <span class="badge badge-danger">{{ unread.count }}</span> {{ unread_message }}
         <span class="caret" aria-hidden="true"></span>
+      </a>
         <ul class="dropdown-menu">
             {% for notification in unread.notifications %}
-            <li><a href="{{ notification.course_instance|url:'notifications' }}" class="alert-link">
-                {{ notification.course_instance.course }}: {{ notification.subject }}
-            </a></li>
+            <li>
+              <a href="{{ notification|url }}" class="alert-link">
+                {{ notification.course_instance.course }}:
+                {% if notification.submission %}
+                {{ notification.submission.exercise }}
+                {% else %}
+                {{ notification.subject }}
+                {% endif %}
+              </a>
+            </li>
             {% endfor %}
         </ul>
-    </a>
 </li>
 {% endif %}
