--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,6 +98,11 @@ html, body {
     background-color: #236aa7;
     background-color: rgba(0, 0, 0, 0.10);
 }
+.topbar .navbar-toggle .badge {
+    position: absolute;
+    right: -10px;
+    top: 4px;
+}
 .topbar .navbar-header .visible-xs {
     max-width: 250px;
     white-space: nowrap;
@@ -112,6 +117,17 @@ html, body {
     border-top: none;
     border-color: #236aa7;
     border-color: rgba(0, 0, 0, 0.25);
+}
+.topbar ul.visible-xs li a {
+    color: white !important;
+    padding: 10px 15px !important;
+}
+.topbar ul.visible-xs ul.dropdown-menu {
+    padding: 0;
+}
+.topbar ul.visible-xs ul.dropdown-menu li {
+    border: none;
+    border-top: 1px solid;
 }
 .topbar ul.visible-xs .header {
     border-left: none;
