--- a/exercise/templates/exercise/submission_plain.html
+++ b/exercise/templates/exercise/submission_plain.html
@@ -24,6 +24,7 @@
     {{ submission.head|safe }}
 	</head>
 	<body>
+
 		<table class="submission-info table table-bordered table-condensed">
 			<tr>
 				{% if not request.is_ajax %}
@@ -77,13 +78,11 @@
 			</tr>
 		</table>
 
+		<div id="exercise-all">
+
 		{% if submission.assistant_feedback %}
 		<h4>{% trans "Assistant feedback" %}</h4>
 		<blockquote>{{ submission.assistant_feedback|safe }}</blockquote>
-		{% elif submission.exercise.allow_assistant_grading %}
-		<div class="alert alert-info">
-			{% trans "No assistant feedback available for this submission." %}
-		</div>
 		{% endif %}
 
 		{% if submission.feedback %}
@@ -95,5 +94,7 @@
 			{% trans "No grader feedback available for this submission." %}
 		</div>
 		{% endif %}
+
+		</div>
 	</body>
 </html>
