--- a/exercise/templates/exercise/staff/_assess_info.html
+++ b/exercise/templates/exercise/staff/_assess_info.html
@@ -23,6 +23,17 @@
             <dt>{% trans "Includes late penalty" %}</dt>
             <dd>-{{ submission.late_penalty_applied|percent }}%</dd>
             {% endif %}
+            <dt>{% trans "Submission number" %}</dt>
+            <dd>
+                {{ index }}.
+                ({% trans "total" %}
+                {{ summary.get_submission_count }}{% if exercise.max_submissions %}
+                / {{ exercise|max_submissions:submission.submitters.first }}{% if is_teacher %}
+                <form method="post" action="{{ submission|url:'submission-increase-max' }}" style="display:inline;" title="{% trans 'Add one extra submission for the student in this exercise.' %}">
+              		{% csrf_token %}
+              		<input class="btn btn-primary" type="submit" value="+1" />
+              	</form>{% endif %}{% endif %})
+            </dd>
         </dl>
 
         <h4>{% trans "Submitted files" %}</h4>
