--- a/edit_course/templates/edit_course/edit_content.html
+++ b/edit_course/templates/edit_course/edit_content.html
@@ -16,7 +16,10 @@
     <label class="control-label" for="id_url">{% trans 'Import and override content configuration from URL' %}</label>
     <input type="text" class="form-control" id="id_url" name="url" value="{{ instance.configure_url }}">
   </div>
-  <button class="btn btn-primary" type="submit">{% trans 'Apply' %}</button>
+  <button class="btn btn-primary" type="submit" name="apply">{% trans 'Apply' %}</button>
+  {% if instance.is_open %}
+  <button class="btn btn-default" type="submit" name="cache">{% trans 'Clear content cache' %}</button>
+  {% endif %}
 </form>
 <div class="panel panel-primary">
     <div class="panel-heading">
