Translate new string

--- a/course/templates/course/_course_dropdown_menu.html
+++ b/course/templates/course/_course_dropdown_menu.html
@@ -12,8 +12,8 @@
 	{% endif %}
 	{% empty %}
 	<li role="presentation">
-		<a href="#">
-			{% trans "Not enrolled in any course" %}
+		<a href="/">
+			{% trans "Begin with enrolling in a course" %}
 		</a>
 	</li>
 	{% endfor %}
