--- a/exercise/templates/exercise/_user_results.html
+++ b/exercise/templates/exercise/_user_results.html
@@ -97,7 +97,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">
             <span class="badge">
               {% if entry.notified %}
-              <span class="glyphicon glyphicon-comment"></span>
+              <span class="glyphicon glyphicon-comment{% if entry.unseen %} red{% endif %}"></span>
               {% endif %}
               {{ entry.submission_count }}
               {% if entry.max_submissions > 0 %}
